--- a/news.html
+++ b/news.html
@@ -11,10 +11,12 @@
     <meta name="keywords" content="maq software, innovative software, data management, Power BI, Sharepoint, cloud, artificial intelligence" />
     <meta name="ROBOTS" content="FOLLOW,INDEX" />
     <!-- Open Graph data -->
+    <meta property="fb:app_id" content="398351013933439" /> 
     <meta name="og:title" property="og:title" content="MAQ Software | Data Management, Power BI, Artificial Intelligence" />
     <meta name="og:description" property="og:description" content="MAQ Software delivers innovative software, data management, Power BI, Sharepoint, cloud, and artificial intelligence solutions for Fortune 500 companies." />
     <meta property="og:image" name="og:image" content="/img/Banners/news.jpg" />
     <meta property="og:type" name="og:type" content="article" />
+    
     <!-- End Open Graph data -->
     <!-- Twitter Card data -->
     <meta property="og:image:width" content="450" />
