--- a/news.html
+++ b/news.html
@@ -20,11 +20,11 @@
     <meta property="og:image:height" content="298" />
     <!-- End Open Graph data -->
     <!-- Twitter Card data -->
-    <!--<meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@maqsoftware" />
     <meta name="twitter:title" content="MAQ Software | Data Management, Power BI, Artificial Intelligence" />
     <meta name="twitter:description" content="MAQ Software delivers innovative software, data management, Power BI, Sharepoint, cloud, and artificial intelligence solutions for Fortune 500 companies." />
-    <meta name="twitter:image" content="/img/Banners/news.jpg" />-->
+    <meta name="twitter:image" content="/img/Banners/news.jpg" />
     <!-- End Twitter Card data -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <meta name="fragment" content="!">
@@ -547,7 +547,7 @@
     <script src="/js/contact.js?v=20170828.2" type="text/javascript"></script>
     <script src="/js/common.js?v=20170828.1" type="text/javascript"></script>
     <script src="/js/home.js?v=20170830" type="text/javascript"></script>
-    <script src="/js/news.js?v=20170823.3" type="text/javascript"></script>
+    <script src="/js/news.js?v=20180413.4" type="text/javascript"></script>
     <!--<script src="/js/app.js?v=20170828.3" type="text/javascript"></script>-->
     <script src="/js/careers.js?v=20170822"></script>
 
