--- a/news-article.html
+++ b/news-article.html
@@ -21,7 +21,7 @@
     <meta name="twitter:site" content="@maqsoftware" />
     <meta name="twitter:title" content="MAQ Software | Data Management, Power BI, Artificial Intelligence" />
     <meta name="twitter:description" content="MAQ Software Case Studies" />
-    <meta name="twitter:image" content="/img/news/entrepreneurArticle.jpg" />
+    <meta name="twitter:image:src" content="/img/news/entrepreneurArticle.jpg" />
     <!-- End Twitter Card data -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <meta name="fragment" content="!">
