--- a/news-article.html
+++ b/news-article.html
@@ -12,7 +12,7 @@
     <!-- Open Graph data -->
     <meta name="og:title" property="og:title" content="MAQ Software | Data Management, Power BI, Artificial Intelligence" />
     <meta name="og:description" property="og:description" content="MAQ Software Case Studies" />
-    <meta property="og:image" name="og:image" content="https://2.bp.blogspot.com/-8dbdkaabH3A/Wi8-akaux7I/AAAAAAAAArw/YGuNV3QMfW06wcIazXQUtEGusvRleoOhQCLcBGAs/s1600/entrepreneur.jpg" />
+    <meta property="og:image" name="og:image" content="/img/news/entrepreneurArticle.jpg" />
     <meta property="og:image:width" content="450" />
     <meta property="og:image:height" content="298" />
     <!-- End Open Graph data -->
@@ -21,7 +21,7 @@
     <meta name="twitter:site" content="@maqsoftware" />
     <meta name="twitter:title" content="MAQ Software | Data Management, Power BI, Artificial Intelligence" />
     <meta name="twitter:description" content="MAQ Software Case Studies" />
-    <meta name="twitter:image:src" content="https://2.bp.blogspot.com/-8dbdkaabH3A/Wi8-akaux7I/AAAAAAAAArw/YGuNV3QMfW06wcIazXQUtEGusvRleoOhQCLcBGAs/s1600/entrepreneur.jpg" />
+    <meta name="twitter:image:src" content="/img/news/entrepreneurArticle.jpg" />
     <!-- End Twitter Card data -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <meta name="fragment" content="!">
