--- a/news-article.html
+++ b/news-article.html
@@ -12,7 +12,7 @@
     <!-- Open Graph data -->
     <meta name="og:title" property="og:title" content="MAQ Software | Data Management, Power BI, Artificial Intelligence" />
     <meta name="og:description" property="og:description" content="MAQ Software Case Studies" />
-    <meta property="og:image" name="og:image" content="https://maqsoftware.com/img/Banners/news.jpg" />
+    <meta property="og:image" property="og:image" content="https://maqsoftware.com/img/Banners/news.jpg" />
     <meta property="og:image:width" content="450" />
     <meta property="og:image:height" content="298" />
     <!-- End Open Graph data -->
