--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 </div>
             <!-- END Visuals -->
                     <h6 class="text-right pt-30">
-                        <a href="/expertise/powerbiviewall">View All</a>
+                        <a href="/expertise/powerbiviewall.html">View All</a>
                     </h6>
                 </div>
 
@@ -582,7 +582,7 @@
 <script src="/js/plugin/mediaelement-and-player.min.js?v=20170822"></script>
 <script src="/js/plugin/sidebar-menu.js?v=20170822" type="text/javascript"></script>
 <script src="https://www.youtube.com/iframe_api"></script>
-<script src="/js/theme.js?v=20180421.2" type="text/javascript"></script>
+<script src="/js/theme.js?v=20180508.2" type="text/javascript"></script>
 <script src="/js/navigation.js?v=20170822" type="text/javascript"></script>
 <script src="/js/contact.js?v=20170828.2" type="text/javascript"></script>
 <script src="/js/common.js?v=20170828.1" type="text/javascript"></script>
